--- a/index.html
+++ b/index.html
@@ -78,10 +78,12 @@
                 Hello! My name is Max Vogel, but I go by Mehvix online. Here’s a
                 <a href="./static/media/IMG_20191020_011042.jpg">photo of me</a
                 ><img
+                    alt="Expand image"
                     src="./static/media/expandoImage.svg"
                     class="dropdown"
                     onclick="toggleImage()"
                 /><img
+                    alt="Me!"
                     id="toggleImage"
                     src="./static/media/IMG_20191020_011042.jpg"
                     style="width: 100%; margin: 1% 0"
