--- a/keys.html
+++ b/keys.html
@@ -1,5 +1,16 @@
+<!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="utf-8" />
+
+        <title>Mehvix | Keys</title>
+        <style>
+            :root {
+                --code-bg-color: #210124;
+                --outside-bg-color: var(--code-bg-color);
+            }
+        </style>
+
         <link type="text/css" rel="stylesheet" href="static/css/style.css" />
         <link
             type="text/css"
@@ -35,15 +46,6 @@
                 }
             }
         </script>
-
-        <meta charset="utf-8" />
-        <title>Mehvix | Keys</title>
-        <style>
-            :root {
-                --code-bg-color: #210124;
-                --outside-bg-color: var(--code-bg-color);
-            }
-        </style>
     </head>
 
     <body>
@@ -55,53 +57,10 @@
             </div>
 
             <h1>Matrix</h1>
-            <ul>
-                <li style="font-weight: 500">Element Desktop (Windows)</li>
-                <ul style="margin-bottom: 0.5em">
-                    <li>
-                        <table>
-                            <tr>
-                                <td>Session ID:</td>
-                                <td><code>RQHVDPLNIL</code></td>
-                            </tr>
-                        </table>
-                    </li>
-                    <li>
-                        <table>
-                            <tr>
-                                <td>Session key:</td>
-                                <td>
-                                    <code
-                                        >eot8ABn0IVILojXdGFqbnBSTCnGSa+ud/u490xOo3y8</code
-                                    >
-                                </td>
-                            </tr>
-                        </table>
-                    </li>
-                </ul>
-                <li style="font-weight: 500">Element Android</li>
-                <ul>
-                    <li>
-                        <table>
-                            <tr>
-                                <td>Session ID:</td>
-                                <td><code>NUOPAMGSIG</code></td>
-                            </tr>
-                        </table>
-                    </li>
-                    <li>
-                        <table>
-                            <tr>
-                                <td>Session key:</td>
-                                <td>
-                                    <code
-                                        >on33XcKux5jqV9sZf+CjFUXr31BZ3bsZzUW8SkDwuoQ</code
-                                    >
-                                </td>
-                            </tr>
-                        </table>
-                    </li>
-                </ul>
+            <ul style="font-weight: 500">
+                <li>Element Desktop (Windows) - <code>RQHVDPLNIL</code></li>
+                <li>Element Desktop (Linux) - <code>OLBDXYXCNV</code></li>
+                <li>Element Android - <code>NUOPAMGSIG</code></li>
             </ul>
 
             <h1>ProtonMail PGP</h1>
