--- a/todo.html
+++ b/todo.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <link
@@ -34,7 +35,12 @@
                 font-size: 105%;
                 font-weight: 500;
                 margin-bottom: 0;
+                margin-top: 0.75em;
+            }
+
+            ul {
                 margin-top: 0.5em;
+                margin-bottom: 0.5em;
             }
         </style>
     </head>
@@ -55,42 +61,47 @@
                     Program to automatically download videos from YouTube as
                     they're uploaded
                 </h1>
-                <li>
-                    Prevents
-                    <a
-                        href="https://old.reddit.com/r/Jon_Bois/comments/ab6930/does_anyone_happen_to_have_pretty_good_episode_4/"
-                        >this</a
-                    >
-                    from happening again.
-                </li>
+                <ul>
+                    <li>
+                        Prevents
+                        <a
+                            href="https://old.reddit.com/r/Jon_Bois/comments/ab6930/does_anyone_happen_to_have_pretty_good_episode_4/"
+                            >this</a
+                        >
+                        from happening again.
+                    </li>
 
-                <li>
-                    Possible with <a href="https://zapier.com">zapier</a> and
-                    <a href="https://github.com/ytdl-org/youtube-dl"
-                        >youtube-dl</a
-                    >
-                </li>
+                    <li>
+                        Possible with
+                        <a href="https://zapier.com">zapier</a> and
+                        <a href="https://github.com/ytdl-org/youtube-dl"
+                            >youtube-dl</a
+                        >
+                    </li>
+                </ul>
 
                 <h1>
                     Visualize
                     <a href="https://play.typeracer.com/">Typeracer</a> data
                 </h1>
-                <li>
-                    I did something
-                    <a
-                        href="https://github.com/Mehvix/synapsBotRW/blob/master/typeracer.py"
-                        >similar already</a
-                    >
-                </li>
+                <ul>
+                    <li>
+                        I did something
+                        <a
+                            href="https://github.com/Mehvix/synapsBotRW/blob/master/typeracer.py"
+                            >similar already</a
+                        >
+                    </li>
 
-                <li>
-                    Should be possible to scrap
-                    <a
-                        href="https://data.typeracer.com/pit/race_history?user=mehvix&amp;n=9999&amp;startDate="
-                        >this webpage</a
-                    >
-                    and save it as a <code>.csv</code>
-                </li>
+                    <li>
+                        Should be possible to scrap
+                        <a
+                            href="https://data.typeracer.com/pit/race_history?user=mehvix&amp;n=9999&amp;startDate="
+                            >this webpage</a
+                        >
+                        and save it as a <code>.csv</code>
+                    </li>
+                </ul>
 
                 <h1>
                     Create a
@@ -102,67 +113,89 @@
                 </h1>
 
                 <h1>Software to monitor desktop app usage</h1>
-                <li>
-                    Similar to
-                    <a href="https://www.getintention.com/"> Intention</a>
-                </li>
+                <ul>
+                    <li>
+                        Similar to
+                        <a href="https://www.getintention.com/"> Intention</a>
+                    </li>
+                </ul>
 
                 <h1>Design / 3D print a custom mouse using G305 internals</h1>
-                <li>
-                    <a href="https://www.reddit.com/r/MouseReview/"
-                        >/r/MouseReview</a
-                    >
-                    has some good resources
-                </li>
+                <ul>
+                    <li>
+                        <a href="https://www.reddit.com/r/MouseReview/"
+                            >/r/MouseReview</a
+                        >
+                        has some good resources
+                    </li>
+                </ul>
 
                 <h1>Remote car starter for the winter</h1>
 
                 <h1>Custom drone with 3D print parts</h1>
 
                 <h1>Successfully 3D print a key</h1>
-                <li>
-                    <a href="https://youtu.be/7kJnGZlirpI"
-                        >Interesting talk on 3D printing keys</a
-                    >
-                </li>
+                <ul>
+                    <li>
+                        <a href="https://youtu.be/7kJnGZlirpI"
+                            >Interesting talk on 3D printing keys</a
+                        >
+                    </li>
+                </ul>
 
                 <h1>Hardware keylogger</h1>
 
                 <h1>Crypto address replacer</h1>
-                <li>Replaces copied crypto address with a different address</li>
+                <ul>
+                    <li>
+                        Replaces copied crypto address with a different address
+                    </li>
+                </ul>
 
                 <h1>Soundcloud Downloader with Metadata Scraper</h1>
 
                 <h1>Logs.tf scrapper + leaderboard</h1>
-                <li>
-                    Integrate with
-                    <a href="https://github.com/Mehvix/Equalizer">Equalizer?</a>
-                </li>
+                <ul>
+                    <li>
+                        Integrate with
+                        <a href="https://github.com/Mehvix/Equalizer"
+                            >Equalizer?</a
+                        >
+                    </li>
+                </ul>
 
                 <h1>"Jon Bois" style video about Richard Russel</h1>
-                <li>
-                    <a
-                        href="https://en.wikipedia.org/wiki/2018_Horizon_Air_Q400_incident"
-                        >Wikipedia Article</a
-                    >
-                </li>
-                <li>
-                    <a
-                        href="https://www.youtube.com/playlist?list=PLUXSZMIiUfFSCYW1o-4whWtepyVlsfuCC"
-                        >Jon Bois's Pretty Good Series</a
-                    >
-                </li>
+                <ul>
+                    <li>
+                        <a
+                            href="https://en.wikipedia.org/wiki/2018_Horizon_Air_Q400_incident"
+                            >Wikipedia Article</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="https://www.youtube.com/playlist?list=PLUXSZMIiUfFSCYW1o-4whWtepyVlsfuCC"
+                            >Jon Bois's Pretty Good Series</a
+                        >
+                    </li>
+                </ul>
 
                 <h1>Right to Repair site</h1>
-                <li>Similar to net neutrality site concept</li>
+                <ul>
+                    <li>Similar to net neutrality site concept</li>
+                </ul>
 
                 <h1>Typeracer bot</h1>
 
                 <h1>Chess / Poker AI</h1>
 
                 <h1>Elon Musk Trading Bot</h1>
-                <li>Buys coins/stocks Elon Tweets about</li>
-                <li>Pretty sure I saw someone do this with Trump's Twitter</li>
+                <ul>
+                    <li>Buys coins/stocks Elon Tweets about</li>
+                    <li>
+                        Pretty sure I saw someone do this with Trump's Twitter
+                    </li>
+                </ul>
 
                 <h1>Learn Vim</h1>
 
@@ -173,12 +206,14 @@
                 <h1>Resistor color code calculator</h1>
 
                 <h1>Write about completed projects and other topics</h1>
-                <li>How and why to learn Colemak</li>
-                <li>How and why to learn morse code</li>
-                <li>Instagram login "lock" exploit</li>
-                <li>Why to care about privacy</li>
-                <li>Why to care about Right to Repair</li>
-                <li>How to protect your digital privacy</li>
+                <ul>
+                    <li>How and why to learn Colemak</li>
+                    <li>How and why to learn morse code</li>
+                    <li>Instagram login "lock" exploit</li>
+                    <li>Why to care about privacy</li>
+                    <li>Why to care about Right to Repair</li>
+                    <li>How to protect your digital privacy</li>
+                </ul>
             </article>
 
             <!--			<h3 style="text-align: center"><a href="./index.html">Return home.</a></h3>-->
