fixed bg on keys

--- a/keys.html
+++ b/keys.html
@@ -6,8 +6,8 @@
         <title>Mehvix | Keys</title>
         <style>
             :root {
-                --code-bg-color: #210124;
-                --outside-bg-color: var(--code-bg-color);
+                --code-bg-color: #210124 !important;
+                --outside-bg-color: #210124 !important;
             }
         </style>
 
