--- a/404.html
+++ b/404.html
@@ -4,6 +4,12 @@
         <link href="/static/css/style.css" rel="stylesheet" />
         <script src="static/js/include.js"></script>
 
+        <link
+            type="text/css"
+            rel="stylesheet"
+            href="../static/css/atom-one-dark-reasonable.css"
+        />
+
         <meta charset="utf-8" />
         <title>Mehvix | 404</title>
         <style>
