--- a/quotes.html
+++ b/quotes.html
@@ -8,6 +8,13 @@
             href="static/css/atom-one-dark-reasonable.css"
         />
 
+        <link
+            rel="alternate"
+            type="application/rss+xml"
+            title="Blog RSS"
+            href="https://mehvix.com/posts/rss.xml"
+        />
+
         <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
         <script>
             hljs.initHighlightingOnLoad()
