--- a/todo.html
+++ b/todo.html
@@ -6,6 +6,13 @@
             rel="stylesheet"
             href="static/css/atom-one-dark-reasonable.css"
         />
+
+        <link
+            rel="alternate"
+            type="application/rss+xml"
+            title="Blog RSS"
+            href="https://mehvix.com/posts/rss.xml"
+        />
         <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
         <link type="text/css" rel="stylesheet" href="static/css/style.css" />
         <script>
