--- a/todo.html
+++ b/todo.html
@@ -42,7 +42,7 @@
                 font-size: 105%;
                 font-weight: 500;
                 margin-bottom: 0;
-                margin-top: 0.75em;
+                margin-top: 0.5em;
             }
 
             ul {
@@ -227,19 +227,22 @@
             <!--			<h3 style="text-align: center"><a href="#" onClick="history.go(-1); return false;">Previous page.</a></h3>-->
 
             <div id="footer">
-                BTC /
+                $BTC /
                 <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1"
                     >15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1</a
                 ><br />
-                ETH /
+                $ETH /
                 <a href="eth:0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74"
                     >0xeeC384Cdef3aD975EdF1D2f6C1dC9a4b1fEEBF74</a
                 ><br />
 
+                <div id="footerDateYear">2021</div>
                 <script>
-                    document.write(new Date().getFullYear())
+                    document.getElementById(
+                        'footerDateYear'
+                    ).innerText = new Date().getFullYear()
                 </script>
-                - Max Vogel
+                / Max Vogel
             </div>
         </div>
     </body>
