new font, abs paths

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
         <link
             type="text/css"
             rel="stylesheet"
-            href="../static/css/atom-one-dark-reasonable.css"
+            href="/static/css/atom-one-dark-reasonable.css"
         />
 
         <meta charset="utf-8" />
@@ -23,7 +23,7 @@
     <body>
         <div class="box">
             <div class="nav">
-                <a href="https://mehvix.com">~</a>/<a href="" class="inverse-bg"
+                <a href="/index.html">~</a>/<a href="" class="inverse-bg"
                     >404</a
                 >
             </div>
@@ -85,5 +85,6 @@
                     ).innerText = new Date().getFullYear()
                 </script>
             </div>
+        </div>
     </body>
 </html>
