--- a/mc.html
+++ b/mc.html
@@ -33,8 +33,11 @@
     <body>
         <div class="box">
             <div class="nav">
-                <a href="../index.html">~</a>/<a href="./index.html">Server</a
-                >/<a href="" class="inverse-bg">mc</a>
+                <a href="/index.html">~</a>/<a href="./index.html">Server</a>/<a
+                    href=""
+                    class="inverse-bg"
+                    >mc</a
+                >
             </div>
 
             <code>mc.mehvix.com:25544</code><br /><br />
@@ -89,5 +92,6 @@
                     ).innerText = new Date().getFullYear()
                 </script>
             </div>
+        </div>
     </body>
 </html>
