--- a/quotes.html
+++ b/quotes.html
@@ -456,5 +456,6 @@
                     ).innerText = new Date().getFullYear()
                 </script>
             </div>
+        </div>
     </body>
 </html>
