--- a/serverservices.html
+++ b/serverservices.html
@@ -109,5 +109,6 @@
                     ).innerText = new Date().getFullYear()
                 </script>
             </div>
+        </div>
     </body>
 </html>
