--- a/todo.html
+++ b/todo.html
@@ -268,5 +268,6 @@
                     ).innerText = new Date().getFullYear()
                 </script>
             </div>
+        </div>
     </body>
 </html>
