--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <div id="footer">
                 <table id="footerTable">
                     <tr>
-                        <td style="width: 80%">$BTC</td>
+                        <td>$BTC</td>
                         <td>
                             <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">
                                 15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1
