--- a/index.html
+++ b/index.html
@@ -82,28 +82,53 @@
         <div class="box">
             <div class="nav"><a href="" class="inverse-bg">~</a>/</div>
             <div>
-                Hello! My name is Max Vogel, but I go by Mehvix online. Here’s a
-                <a href="./static/media/IMG_20191020_011042.jpg">photo of me</a
-                ><img
-                    alt="Expand image"
-                    src="./static/media/expandoImage.svg"
-                    class="dropdown"
-                    onclick="toggleImage()"
-                /><img
-                    alt="Me!"
-                    id="toggleImage"
-                    src="./static/media/IMG_20191020_011042.jpg"
-                    style="width: 100%; margin: 1% 0"
-                    class="hidden"
-                />
-                at UW-Madhacks 2019. I'm interested in studying engineering and
-                passionate about privacy and security. In my free time I enjoy
-                fencing, snowboarding, coding, CADing,
-                <a
-                    href="https://open.spotify.com/playlist/2uEoR9SXgtMSgjIjgohVnz?si=H0eRZQD_SW-AM0F1BCxEEQ"
-                    >listening to music</a
-                >, and working on
-                <a href="https://www.team1306.com">1306</a> stuff.
+                <p>Hello! My name is Max Vogel, but I go by Mehvix online.</p>
+                <p>
+                    Here’s a
+                    <a href="./static/media/IMG_20191020_011042.jpg"
+                        >photo of me</a
+                    ><img
+                        alt="Expand image"
+                        src="./static/media/expandoImage.svg"
+                        class="dropdown"
+                        onclick="toggleImage()"
+                    /><img
+                        alt="Me!"
+                        id="toggleImage"
+                        src="./static/media/IMG_20191020_011042.jpg"
+                        style="width: 100%; margin: 1% 0"
+                        class="hidden"
+                    />
+                    at UW-Madhacks 2019.
+                </p>
+                <p>
+                    I'm an incoming freshman at
+                    <a href="https://www.berkeley.edu/">UC Berkeley</a> studying
+                    <a href="https://eecs.berkeley.edu/">EECS</a>.
+                </p>
+                <p>
+                    I like the
+                    <a href="https://github.com/one-dark">OneDark</a> color
+                    scheme,
+                    <a href="https://colemakmods.github.io/mod-dh/"
+                        >Colemak Mod-DH</a
+                    >
+                    keyboard layout, and
+                    <a href="https://fonts.adobe.com/fonts/pt-mono">PT Mono</a>
+                    as a font.
+                </p>
+                <p>
+                    In my free time I enjoy
+                    <a href="http://www.cracoviafoilfencing.com/">fencing</a>,
+                    <a href="https://www.instagram.com/tyrolbasinparks/"
+                        >snowboarding</a
+                    >, coding, CADing,
+                    <a
+                        href="https://open.spotify.com/playlist/2uEoR9SXgtMSgjIjgohVnz?si=H0eRZQD_SW-AM0F1BCxEEQ"
+                        >listening to music</a
+                    >, and working on
+                    <a href="https://www.team1306.com">1306</a> stuff.
+                </p>
             </div>
 
             <div>
