--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
         <div class="box">
             <div class="nav"><a href="" class="inverse-bg">~</a>/</div>
             <div>
-                <p>Hello! My name is Max Vogel, but I go by Mehvix online.</p>
+                <p>
+                    Hello! My name is Max Vogel and Mehvix is my username
+                    online.
+                </p>
                 <p>
                     Here’s a
                     <a href="./static/media/IMG_20191020_011042.jpg"
@@ -102,7 +105,7 @@
                     at UW-Madhacks 2019.
                 </p>
                 <p>
-                    I'm an incoming freshman at
+                    I'm an incoming freshmen at
                     <a href="https://www.berkeley.edu/">UC Berkeley</a> studying
                     <a href="https://eecs.berkeley.edu/">EECS</a>.
                 </p>
