windows post, rss changes, other tweaks

--- a/404.html
+++ b/404.html
@@ -46,7 +46,7 @@
             <div id="footer">
                 <table id="footerTable">
                     <tr>
-                        <td style="width: 80%">$BTC</td>
+                        <td>$BTC</td>
                         <td>
                             <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">
                                 15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1
@@ -79,11 +79,7 @@
                     </tr>
                 </table>
 
-                <script>
-                    document.getElementById(
-                        'footerDateYear'
-                    ).innerText = new Date().getFullYear()
-                </script>
+                <script src="/static/js/include.js"></script>
             </div>
         </div>
     </body>
