--- a/index.html
+++ b/index.html
@@ -278,11 +278,7 @@
                     </tr>
                 </table>
 
-                <script>
-                    document.getElementById(
-                        'footerDateYear'
-                    ).innerText = new Date().getFullYear()
-                </script>
+                <script src="/static/js/include.js"></script>
             </div>
         </div>
     </body>
