--- a/keys.html
+++ b/keys.html
@@ -127,7 +127,7 @@ LKutr+KwFwaJLLcqxjciyMueRAnPoKrodbIZ+ALMR2GMhJD6y7RuDBm1ll7c
             <div id="footer">
                 <table id="footerTable">
                     <tr>
-                        <td style="width: 80%">$BTC</td>
+                        <td>$BTC</td>
                         <td>
                             <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">
                                 15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1
@@ -160,11 +160,7 @@ LKutr+KwFwaJLLcqxjciyMueRAnPoKrodbIZ+ALMR2GMhJD6y7RuDBm1ll7c
                     </tr>
                 </table>
 
-                <script>
-                    document.getElementById(
-                        'footerDateYear'
-                    ).innerText = new Date().getFullYear()
-                </script>
+                <script src="/static/js/include.js"></script>
             </div>
         </div>
     </body>
