--- a/quotes.html
+++ b/quotes.html
@@ -417,7 +417,7 @@
             <div id="footer">
                 <table id="footerTable">
                     <tr>
-                        <td style="width: 80%">$BTC</td>
+                        <td>$BTC</td>
                         <td>
                             <a href="btc:15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1">
                                 15adHcuUPLHzVmUqKqgeLfLzvtfD5r7WJ1
@@ -450,11 +450,7 @@
                     </tr>
                 </table>
 
-                <script>
-                    document.getElementById(
-                        'footerDateYear'
-                    ).innerText = new Date().getFullYear()
-                </script>
+                <script src="/static/js/include.js"></script>
             </div>
         </div>
     </body>
