remove resume til I get around to updating it

--- a/index.html
+++ b/index.html
@@ -173,43 +173,39 @@
 
                 <div>
                     <table class="about">
-                        <tbody>
-                            <tr>
-                                <td>GitHub</td>
-                                <td>
-                                    <a href="https://github.com/mehvix"
-                                        >Mehvix</a
-                                    >
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Stack Overflow</td>
-                                <td>
-                                    <a
-                                        href="https://stackoverflow.com/users/7833617/"
-                                        >Mehvix</a
-                                    >
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>LinkedIn</td>
-                                <td>
-                                    <a
-                                        href="https://www.linkedin.com/in/mehvix/"
-                                        >Max Vogel</a
-                                    >
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Resumé</td>
-                                <td>
-                                    <a
-                                        href="https://cloud.mehvix.com/s/9oXaWqbLR4amMmz"
-                                        >Link</a
-                                    >
-                                </td>
-                            </tr>
-                        </tbody>
+                        <tr>
+                            <td>GitHub</td>
+                            <td>
+                                <a href="https://github.com/mehvix">Mehvix</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Stack Overflow</td>
+                            <td>
+                                <a
+                                    href="https://stackoverflow.com/users/7833617/"
+                                    >Mehvix</a
+                                >
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>LinkedIn</td>
+                            <td>
+                                <a href="https://www.linkedin.com/in/mehvix/"
+                                    >Max Vogel</a
+                                >
+                            </td>
+                        </tr>
+                        <!-- todo: uncomment when resume updated -->
+                        <!-- <tr>
+                            <td>Resumé</td>
+                            <td>
+                                <a
+                                    href="https://cloud.mehvix.com/s/9oXaWqbLR4amMmz"
+                                    >Link</a
+                                >
+                            </td>
+                        </tr> -->
                     </table>
                 </div>
             </div>
