--- a/keys.html
+++ b/keys.html
@@ -9,6 +9,10 @@
                 --code-bg-color: #210124 !important;
                 --outside-bg-color: #210124 !important;
             }
+
+            ul {
+                padding-left: 4ch;
+            }
         </style>
 
         <link type="text/css" rel="stylesheet" href="static/css/style.css" />
@@ -28,7 +32,7 @@
         <script>
             hljs.initHighlightingOnLoad()
         </script>
-        <script src="static/js/include.js"></script>
+        <script src="/static/js/include.js"></script>
         <script>
             function copyText() {
                 var textToCopy = document.getElementById('pgp')
@@ -71,6 +75,10 @@
             </ul>
 
             <h1>ProtonMail PGP</h1>
+            <p>
+                This is for my ProtonMail and <code>@mehvix.com</code> email
+                accounts.
+            </p>
             <ul>
                 <li>
                     <a href="./static/media/mehvix@protonmail.com.asc"
@@ -159,8 +167,6 @@ LKutr+KwFwaJLLcqxjciyMueRAnPoKrodbIZ+ALMR2GMhJD6y7RuDBm1ll7c
                         <td>Max Vogel</td>
                     </tr>
                 </table>
-
-                <script src="/static/js/include.js"></script>
             </div>
         </div>
     </body>
