--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
             title="Blog RSS"
             href="https://mehvix.com/posts/rss.xml"
         />
-        <script src="/static/js/attributes.js"></script>
         <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.0.3/build/highlight.min.js"></script>
         <script>
             hljs.initHighlightingOnLoad()
         </script>
-        <script src="static/js/include.js"></script>
+        <script src="/static/js/include.js"></script>
+        <script src="/static/js/attributes.js"></script>
         <meta charset="utf-8" />
         <title>Mehvix | Home</title>
         <style>
@@ -129,8 +129,8 @@
                             <tr>
                                 <td>Email</td>
                                 <td>
-                                    mehvix<code>at</code>protonmail<code>dot</code>com
-                                    <wbr /> (<a href="keys.html">Keys</a>)
+                                    max<code>at</code>mehvix<code>dot</code>com
+                                    <wbr /> (<a href="keys.html">keys</a>)
                                 </td>
                             </tr>
                             <tr>
@@ -141,7 +141,7 @@
                                 <td>Matrix</td>
                                 <td>
                                     @mehvix:matrix.org (<a href="keys.html"
-                                        >Keys</a
+                                        >keys</a
                                     >)
                                 </td>
                             </tr>
@@ -259,8 +259,6 @@
                         <td>Max Vogel</td>
                     </tr>
                 </table>
-
-                <script src="/static/js/include.js"></script>
             </div>
         </div>
     </body>
