--- a/quotes.html
+++ b/quotes.html
@@ -19,7 +19,7 @@
         <script>
             hljs.initHighlightingOnLoad()
         </script>
-        <script src="static/js/include.js"></script>
+        <script src="/static/js/include.js"></script>
         <meta charset="utf-8" />
         <title>Mehvix | Quotes</title>
         <style>
@@ -63,6 +63,18 @@
             <div class="main">
                 <article>
                     <div>
+                        <b>Longest Monkey Sentence</b>
+                        <blockquote>
+                            Give orange me give eat orange me eat orange give me
+                            eat orange give me you.
+                        </blockquote>
+                        <p>
+                            <a href="https://en.wikipedia.org/wiki/Nim_Chimpsky"
+                                >Nim Chimpsky</a
+                            >
+                        </p>
+                    </div>
+                    <div>
                         <b>Reality</b>
                         <blockquote>
                             When my bird was looking at my computer monitor, i
@@ -86,32 +98,6 @@
                         <p>
                             <a href="https://youtu.be/PsiZmSkN3yo"
                                 >Terry Davis</a
-                            >
-                        </p>
-                    </div>
-
-                    <div>
-                        <b
-                            >All of humanity's problems stem from man's
-                            inability to sit quietly in a room alone</b
-                        >
-                        <blockquote>
-                            That is why we like noise and activity so much. That
-                            is why imprisonment is such a horrific punishment.
-                            That is why the pleasure of being alone is
-                            incomprehensible. That is, in fact, the main joy of
-                            the condition of kingship, because people are
-                            constantly trying to amuse kings and provide them
-                            with all sorts of distraction.—The king is
-                            surrounded by people whose only thought is to
-                            entertain him and prevent him from thinking about
-                            himself. King though he may be, he is unhappy if he
-                            thinks about it
-                        </blockquote>
-                        <p>
-                            <a
-                                href="http://libgen.rs/book/index.php?md5=1FC7013AAB99E7BF73BB2104C1A798EE"
-                                >Blaise Pascal</a
                             >
                         </p>
                     </div>
@@ -233,65 +219,6 @@
                     </div>
 
                     <div>
-                        <b>Your Obituary</b>
-                        <blockquote>
-                            And I have no illusions that I’ll be remembered for
-                            very long. If Byron White is as nearly forgotten as
-                            he is now, as he said he would be, I have no
-                            illusions, I won’t last five minutes; that’s as it
-                            should be. <br /><br />
-
-                            The great joy in life, Shaw said, is devoting
-                            yourself to a cause you deem mighty before you are
-                            thrown on the scrap heap. An independent judiciary
-                            in this country, I can carry that baton for as long
-                            as I can carry it, and I have no illusions I’m going
-                            to last as long as you suggest, and that’ll be good
-                            enough for me.
-                        </blockquote>
-                        <p>
-                            <a
-                                href="https://www.c-span.org/video/?c4662446/user-clip-senator-ben-sasse-questions-judge-neil-gorsuch"
-                                >Judge Neil Gorsuch</a
-                            >
-                        </p>
-                    </div>
-
-                    <div>
-                        <b>Evil</b>
-                        <blockquote>
-                            It was granted me to carry away from my prison years
-                            on my bent back, which nearly broke beneath its
-                            load, this essential experience; how a human being
-                            becomes evil and how good. In the intoxication of
-                            youthful successes I had felt myself to be
-                            infallible, and I was therefore cruel. In the
-                            surfeit of power I was a murderer, and an oppressor.
-                            In my most evil moments I was convinced that I was
-                            doing good, and I was well supplied with systematic
-                            arguments. And it was only when I lay there on
-                            rotting prison straw that I sensed within myself the
-                            first stirrings of good. Gradually it was disclosed
-                            to me that the line separating good and evil passes
-                            not through states, nor between classes, nor between
-                            political parties either—but right through every
-                            human heart—and through all human hearts. This line
-                            shifts. Inside us, it oscillates with the years. And
-                            even within hearts overwhelmed by evil, one small
-                            bridgehead of good is retained. And even in the best
-                            of all hearts, there remains… an unuprooted small
-                            corner of evil.
-                        </blockquote>
-                        <p>
-                            <a
-                                href="http://libgen.rs/book/index.php?md5=5D5620C06690FF231D4DDF0F8D598243"
-                                >Aleksandr Solzhenitsyn, The Gulag
-                                Archipelago</a
-                            >
-                        </p>
-                    </div>
-
-                    <div>
                         <b>In the Desert</b>
                         <blockquote>
                             In the desert<br />
@@ -310,24 +237,6 @@
                                 href="https://public.wsu.edu/~campbelld/crane/black.htm"
                                 >Stephen Crane</a
                             >
-                        </p>
-                    </div>
-
-                    <div>
-                        <b>Free Thought</b>
-                        <blockquote>
-                            He who knows only his own side of the case knows
-                            little of that. His reasons may be good, and no one
-                            may have been able to refute them. But if he is
-                            equally unable to refute the reasons on the opposite
-                            side, if he does not so much as know what they are,
-                            he has no ground for preferring either opinion.
-                        </blockquote>
-                        <p>
-                            <a
-                                href="http://libgen.rs/book/index.php?md5=5CA9C496EE645E2688AFAFDA58C0E411"
-                                >John Stuart Mill
-                            </a>
                         </p>
                     </div>
 
@@ -449,8 +358,6 @@
                         <td>Max Vogel</td>
                     </tr>
                 </table>
-
-                <script src="/static/js/include.js"></script>
             </div>
         </div>
     </body>
